@@ -7,7 +7,9 @@
 
 	I am stupid.
 
-
+	Eric: Heh heh. 2 releases in one day. I'm impressed. Maybe one of these
+times we'll actually get some of it right ;) Anyway, yeah. Just bug fixes in
+this one.
 
 0.9.16;
 	Rob: Blah Blah Blah.
